syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "Store";

package nem;


import "google/protobuf/timestamp.proto";

message Store {  
    string uuid = 1;
    string identifier = 2;
    string description = 3;
    StoreStatus status = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    string created_by_uuid = 7;
    string updated_by_uuid = 8;    
}

enum StoreStatus { 
    STORE_STATUS_INVALID = 0;
    STORE_STATUS_ACTIVE = 1;
    STORE_STATUS_DISABLED = 2;
}
